fix: scrollbar layout

--- a/app/client/memo.blog/src/App.scss
+++ b/app/client/memo.blog/src/App.scss
@@ -1,3 +1,5 @@
+@import '@/styles/base.scss';
+
 @font-face {
   font-family: 'Euclid Circular B';
   font-display: auto;
@@ -36,5 +38,25 @@
 body {
   font-family: 'Euclid Circular B';
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: overlay;
   background: linear-gradient(270deg, #f7f7f7 0%, #fff 50%, #f7f7f7 100%);
+}
+
+body::-webkit-scrollbar {
+  /*滚动条整体样式*/
+  width: 6px;
+}
+body::-webkit-scrollbar-thumb {
+  /*滚动条里面小方块*/
+  border-radius: 7px;
+  background-color: $secondaryColor;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: $primaryColor;
+}
+body::-webkit-scrollbar-track {
+  /*滚动条里面轨道*/
+  border-radius: 7px;
+  background: rgba(0, 0, 0, 0);
 }
