--- a/app/client/memo.blog/src/pages/home/index.module.scss
+++ b/app/client/memo.blog/src/pages/home/index.module.scss
@@ -1,2 +1,6 @@
-.divTest {
+.home {
+  .test {
+    height: 1300px;
+    background: ghostwhite;
+  }
 }
